--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,8 @@ if(BUILD_TESTS)
     endmacro()
 
     add_test_executable(RSA_test tests/RSA_test/RSA_test.cpp)
+    add_test_executable(PKE_CPA_AMV_2017_test tests/RSA_test/PKE_CPA_AMV_2017_test.cpp)
+    add_test_executable(PKE_CCA_AMV_2017_test tests/RSA_test/PKE_CCA_AMV_2017_test.cpp)
     add_test_executable(Elements_test tests/base_test/Elements_test.cpp)
     add_test_executable(AES_test tests/SE_test/AES_test.cpp)
     add_test_executable(BLS_test tests/signature_test/BLS_test.cpp)
@@ -78,6 +80,7 @@ if(BUILD_TESTS)
     add_test_executable(RABE_XNM_test tests/ABE_test/RABE_XNM_test.cpp)
     add_test_executable(RABE_TMM_test tests/ABE_test/RABE_TMM_test.cpp)
 
+    add_test_executable(CH_AMV_2017_test tests/scheme_test/CH_test/CH_AMV_2017_test.cpp)
     add_test_executable(CH_CDK_2017_test tests/scheme_test/CH_test/CH_CDK_2017_test.cpp)
     add_test_executable(CH_ET_BC_CDK_2017_test tests/scheme_test/CH_test/CH_ET_BC_CDK_2017_test.cpp)
     add_test_executable(CH_FS_ECC_CCT_2024_test tests/scheme_test/CH_test/CH_FS_ECC_CCT_2024_test.cpp)
