update MCH_CDK_2017 CH_AMV_2017 CH_FS_ECC_CCT_2024 CH_KEF_MH_RSA_F_AM_2004 CHET_RSA_CDK_2017 FCR_CH_PreQA_DKS_2020

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,8 @@ file(GLOB LIBRARY_SOURCES
     src/ABE/*.cpp
     src/scheme/CH/*.cpp
     src/scheme/IBCH/*.cpp
-    src/scheme/PBCH/*.cpp
+    # src/scheme/PBCH/*.cpp
+
 )
 add_library(ChameLib STATIC ${LIBRARY_SOURCES})
 target_link_libraries(ChameLib PUBLIC gmp pbc OpenSSL::SSL)
@@ -101,12 +102,12 @@ if(BUILD_TESTS)
     add_test_executable(IB_CH_ZSS_S2_2003_test tests/scheme_test/IBCH_test/IB_CH_ZSS_S2_2003_test.cpp)
     add_test_executable(ID_B_CollRes_XSL_2021_test tests/scheme_test/IBCH_test/ID_B_CollRes_XSL_2021_test.cpp)
 
-    add_test_executable(DPCH_MXN_2022_test tests/scheme_test/PBCH_test/DPCH_MXN_2022_test.cpp)
-    add_test_executable(MAPCH_ZLW_2021_test tests/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
-    add_test_executable(PCH_DSS_2019_test tests/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
-    add_test_executable(PCHBA_TLL_2020_test tests/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
-    add_test_executable(RPCH_TMM_2022_test tests/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
-    add_test_executable(RPCH_XNM_2021_test tests/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
+    # add_test_executable(DPCH_MXN_2022_test tests/scheme_test/PBCH_test/DPCH_MXN_2022_test.cpp)
+    # add_test_executable(MAPCH_ZLW_2021_test tests/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
+    # add_test_executable(PCH_DSS_2019_test tests/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
+    # add_test_executable(PCHBA_TLL_2020_test tests/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
+    # add_test_executable(RPCH_TMM_2022_test tests/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
+    # add_test_executable(RPCH_XNM_2021_test tests/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
 endif()
 
 install(TARGETS ChameLib ARCHIVE DESTINATION lib)
