--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ file(GLOB LIBRARY_SOURCES
     src/scheme/CH/*.cpp
     src/scheme/IBCH/*.cpp
     # src/scheme/PBCH/*.cpp
+    src/scheme/PBCH/DPCH_MXN_2022.cpp
 
 )
 add_library(ChameLib STATIC ${LIBRARY_SOURCES})
@@ -102,7 +103,7 @@ if(BUILD_TESTS)
     add_test_executable(IB_CH_ZSS_S2_2003_test tests/scheme_test/IBCH_test/IB_CH_ZSS_S2_2003_test.cpp)
     add_test_executable(ID_B_CollRes_XSL_2021_test tests/scheme_test/IBCH_test/ID_B_CollRes_XSL_2021_test.cpp)
 
-    # add_test_executable(DPCH_MXN_2022_test tests/scheme_test/PBCH_test/DPCH_MXN_2022_test.cpp)
+    add_test_executable(DPCH_MXN_2022_test tests/scheme_test/PBCH_test/DPCH_MXN_2022_test.cpp)
     # add_test_executable(MAPCH_ZLW_2021_test tests/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
     # add_test_executable(PCH_DSS_2019_test tests/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
     # add_test_executable(PCHBA_TLL_2020_test tests/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
