--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ file(GLOB LIBRARY_SOURCES
     # src/scheme/PBCH/*.cpp
     src/scheme/PBCH/DPCH_MXN_2022.cpp
     src/scheme/PBCH/MAPCH_ZLW_2021.cpp
+    src/scheme/PBCH/PCH_DSS_2019.cpp
 
 )
 add_library(ChameLib STATIC ${LIBRARY_SOURCES})
@@ -106,7 +107,7 @@ if(BUILD_TESTS)
 
     add_test_executable(DPCH_MXN_2022_test tests/scheme_test/PBCH_test/DPCH_MXN_2022_test.cpp)
     add_test_executable(MAPCH_ZLW_2021_test tests/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
-    # add_test_executable(PCH_DSS_2019_test tests/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
+    add_test_executable(PCH_DSS_2019_test tests/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
     # add_test_executable(PCHBA_TLL_2020_test tests/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
     # add_test_executable(RPCH_TMM_2022_test tests/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
     # add_test_executable(RPCH_XNM_2021_test tests/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
