--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ file(GLOB LIBRARY_SOURCES
     src/scheme/PBCH/MAPCH_ZLW_2021.cpp
     src/scheme/PBCH/PCH_DSS_2019.cpp
     src/scheme/PBCH/PCHBA_TLL_2020.cpp
+    src/scheme/PBCH/RPCH_TMM_2022.cpp
 )
 add_library(ChameLib STATIC ${LIBRARY_SOURCES})
 target_link_libraries(ChameLib PUBLIC gmp pbc OpenSSL::SSL)
@@ -109,7 +110,7 @@ if(BUILD_TESTS)
     add_test_executable(MAPCH_ZLW_2021_test tests/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
     add_test_executable(PCH_DSS_2019_test tests/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
     add_test_executable(PCHBA_TLL_2020_test tests/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
-    # add_test_executable(RPCH_TMM_2022_test tests/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
+    add_test_executable(RPCH_TMM_2022_test tests/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
     # add_test_executable(RPCH_XNM_2021_test tests/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
 endif()
 
