--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ if(BUILD_TESTS)
     add_test_executable(CH_KEF_DL_CZT_2011_test tests/scheme_test/CH_test/CH_KEF_DL_CZT_2011_test.cpp)
     add_test_executable(CH_KEF_DLP_LLA_2012_test tests/scheme_test/CH_test/CH_KEF_DLP_LLA_2012_test.cpp)
     add_test_executable(CH_KEF_MH_RSA_F_AM_2004_test tests/scheme_test/CH_test/CH_KEF_MH_RSA_F_AM_2004_test.cpp)
+    add_test_executable(CH_KEF_MH_RSANN_F_AM_2004_test tests/scheme_test/CH_test/CH_KEF_MH_RSANN_F_AM_2004_test.cpp)
     add_test_executable(CH_KEF_MH_SDH_DL_AM_2004_test tests/scheme_test/CH_test/CH_KEF_MH_SDH_DL_AM_2004_test.cpp)
     add_test_executable(CH_KEF_NoMH_AM_2004_test tests/scheme_test/CH_test/CH_KEF_NoMH_AM_2004_test.cpp)
     add_test_executable(CHET_RSA_CDK_2017_test tests/scheme_test/CH_test/CHET_RSA_CDK_2017_test.cpp)
