--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ if(BUILD_TESTS)
     add_test_executable(CH_AMV_2017_test tests/scheme_test/CH_test/CH_AMV_2017_test.cpp)
     add_test_executable(CH_CDK_2017_test tests/scheme_test/CH_test/CH_CDK_2017_test.cpp)
     add_test_executable(CH_ET_BC_CDK_2017_test tests/scheme_test/CH_test/CH_ET_BC_CDK_2017_test.cpp)
+    add_test_executable(CH_ET_KOG_CDK_2017_test tests/scheme_test/CH_test/CH_ET_KOG_CDK_2017_test.cpp)
     add_test_executable(CH_FS_ECC_CCT_2024_test tests/scheme_test/CH_test/CH_FS_ECC_CCT_2024_test.cpp)
     add_test_executable(CH_KEF_CZK_2004_test tests/scheme_test/CH_test/CH_KEF_CZK_2004_test.cpp)
     add_test_executable(CH_KEF_DL_CZT_2011_test tests/scheme_test/CH_test/CH_KEF_DL_CZT_2011_test.cpp)
