--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,9 +29,11 @@ file(GLOB LIBRARY_SOURCES
     src/ABE/MA_ABE.cpp
     src/ABE/Policy_generation.cpp
     src/ABE/Policy_resolution.cpp
+    src/ABE/CP_ABE.cpp
 
     src/scheme/PBCH/DPCH_MXN_2022.cpp
     src/scheme/PBCH/MAPCH_ZLW_2021.cpp
+    src/scheme/PBCH/PCH_DSS_2019.cpp
 
     src/scheme/CH/CH_CDK_2017.cpp
     src/scheme/CH/CH_ET_BC_CDK_2017.cpp
@@ -95,7 +97,7 @@ if(BUILD_TESTS)
     # add_test_executable(PKE_CCA_AMV_2017_test test/AE_test/PKE_CCA_AMV_2017_test.cpp)
     # add_test_executable(AES_test test/SE_test/AES_test.cpp)
     add_test_executable(BLS_test test/signature_test/BLS_test.cpp)
-    # add_test_executable(CP_ABE_test test/ABE_test/CP_ABE_test.cpp)
+    add_test_executable(CP_ABE_test test/ABE_test/CP_ABE_test.cpp)
     add_test_executable(MA_ABE_test test/ABE_test/MA_ABE_test.cpp)
     # add_test_executable(ABET_test test/ABE_test/ABET_test.cpp)
     # add_test_executable(RABE_XNM_test test/ABE_test/RABE_XNM_test.cpp)
@@ -126,7 +128,7 @@ if(BUILD_TESTS)
 
     add_test_executable(DPCH_MXN_2022_test test/scheme_test/PBCH_test/DPCH_MXN_2022_test.cpp)
     add_test_executable(MAPCH_ZLW_2021_test test/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
-    # add_test_executable(PCH_DSS_2019_test test/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
+    add_test_executable(PCH_DSS_2019_test test/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
     # add_test_executable(PCHBA_TLL_2020_test test/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
     # add_test_executable(RPCH_TMM_2022_test test/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
     # add_test_executable(RPCH_XNM_2021_test test/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
