--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ file(GLOB LIBRARY_SOURCES
     src/scheme/PBCH/DPCH_MXN_2022.cpp
     src/scheme/PBCH/MAPCH_ZLW_2021.cpp
     src/scheme/PBCH/PCH_DSS_2019.cpp
+    src/scheme/PBCH/RPCH_TMM_2022.cpp
+    src/scheme/PBCH/RPCH_XNM_2021.cpp
 
     src/scheme/CH/CH_CDK_2017.cpp
     src/scheme/CH/CH_ET_BC_CDK_2017.cpp
@@ -132,8 +134,8 @@ if(BUILD_TESTS)
     add_test_executable(MAPCH_ZLW_2021_test test/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
     add_test_executable(PCH_DSS_2019_test test/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
     # add_test_executable(PCHBA_TLL_2020_test test/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
-    # add_test_executable(RPCH_TMM_2022_test test/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
-    # add_test_executable(RPCH_XNM_2021_test test/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
+    add_test_executable(RPCH_TMM_2022_test test/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
+    add_test_executable(RPCH_XNM_2021_test test/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
 endif()
 
 install(TARGETS ChameLib ARCHIVE DESTINATION lib)
