--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: test
 
 on:
   push:
@@ -21,10 +21,21 @@ jobs:
 
     - name: Download and install PBC library
       run: |
+        cd /tmp
         wget https://crypto.stanford.edu/pbc/files/pbc-0.5.14.tar.gz
         tar -xzf pbc-0.5.14.tar.gz
         cd pbc-0.5.14
         ./configure
+        make
+        sudo make install
+        sudo ldconfig
+
+    - name: Install gtest
+      run: |
+        cd /tmp
+        git clone https://github.com/google/googletest.git
+        cd googletest
+        cmake .
         make
         sudo make install
         sudo ldconfig
