--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,7 @@ if(BUILD_TESTS)
     # add_test_executable(RSA_test test/AE_test/RSA_test.cpp)
     # add_test_executable(PKE_CPA_AMV_2017_test test/AE_test/PKE_CPA_AMV_2017_test.cpp)
     # add_test_executable(PKE_CCA_AMV_2017_test test/AE_test/PKE_CCA_AMV_2017_test.cpp)
-    # add_test_executable(AES_test test/SE_test/AES_test.cpp)
+    add_test_executable(AES_test test/SE_test/AES_test.cpp)
     add_test_executable(BLS_test test/signature_test/BLS_test.cpp)
     add_test_executable(CP_ABE_test test/ABE_test/CP_ABE_test.cpp)
     add_test_executable(MA_ABE_test test/ABE_test/MA_ABE_test.cpp)
