add PCHBA_TLL_2020_Test CH_AMV_2017_Test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,50 +14,17 @@ include_directories(include)
 find_package(OpenSSL REQUIRED)
 
 file(GLOB LIBRARY_SOURCES
-    # src/AE/*.cpp
+    src/AE/*.cpp
     src/base/*.cpp
     src/exception/*.cpp
     src/curve/*.cpp
     src/utils/*.cpp
     src/SE/*.cpp
     src/signature/*.cpp
-    # src/ABE/*.cpp
-    # src/scheme/CH/*.cpp
+    src/ABE/*.cpp
+    src/scheme/CH/*.cpp
     src/scheme/IBCH/*.cpp
-    # src/scheme/PBCH/*.cpp
-
-    src/AE/RSA.cpp
-
-    src/ABE/MA_ABE.cpp
-    src/ABE/Policy_generation.cpp
-    src/ABE/Policy_resolution.cpp
-    src/ABE/CP_ABE.cpp
-    src/ABE/RABE_TMM.cpp
-    src/ABE/RABE_XNM.cpp
-
-    src/scheme/PBCH/DPCH_MXN_2022.cpp
-    src/scheme/PBCH/MAPCH_ZLW_2021.cpp
-    src/scheme/PBCH/PCH_DSS_2019.cpp
-    src/scheme/PBCH/RPCH_TMM_2022.cpp
-    src/scheme/PBCH/RPCH_XNM_2021.cpp
-
-    src/scheme/CH/CH_CDK_2017.cpp
-    src/scheme/CH/CH_ET_BC_CDK_2017.cpp
-    src/scheme/CH/CH_ET_KOG_CDK_2017.cpp
-    src/scheme/CH/CH_FS_ECC_CCT_2024.cpp
-    src/scheme/CH/CH_KEF_CZK_2004.cpp
-    src/scheme/CH/CH_KEF_DL_CZT_2011.cpp
-    src/scheme/CH/CH_KEF_DLP_LLA_2012.cpp
-    src/scheme/CH/CH_KEF_MH_RSA_F_AM_2004.cpp
-    src/scheme/CH/CH_KEF_MH_RSANN_F_AM_2004.cpp
-    src/scheme/CH/CH_KEF_MH_SDH_DL_AM_2004.cpp
-    src/scheme/CH/CH_KEF_NoMH_AM_2004.cpp
-    src/scheme/CH/CHET_RSA_CDK_2017.cpp
-    src/scheme/CH/CR_CH_DSS_2020.cpp
-    src/scheme/CH/FCR_CH_PreQA_DKS_2020.cpp
-    src/scheme/CH/MCH_CDK_2017.cpp
-
-    src/AE/RSA.cpp
+    src/scheme/PBCH/*.cpp
 )
 add_library(ChameLib STATIC ${LIBRARY_SOURCES})
 target_link_libraries(ChameLib PUBLIC gmp pbc OpenSSL::SSL)
@@ -100,17 +67,17 @@ if(BUILD_TESTS)
     endmacro()
 
     add_test_executable(RSA_test test/AE_test/RSA_test.cpp)
-    # add_test_executable(PKE_CPA_AMV_2017_test test/AE_test/PKE_CPA_AMV_2017_test.cpp)
-    # add_test_executable(PKE_CCA_AMV_2017_test test/AE_test/PKE_CCA_AMV_2017_test.cpp)
+    add_test_executable(PKE_CPA_AMV_2017_test test/AE_test/PKE_CPA_AMV_2017_test.cpp)
+    add_test_executable(PKE_CCA_AMV_2017_test test/AE_test/PKE_CCA_AMV_2017_test.cpp)
     add_test_executable(AES_test test/SE_test/AES_test.cpp)
     add_test_executable(BLS_test test/signature_test/BLS_test.cpp)
     add_test_executable(CP_ABE_test test/ABE_test/CP_ABE_test.cpp)
     add_test_executable(MA_ABE_test test/ABE_test/MA_ABE_test.cpp)
-    # add_test_executable(ABET_test test/ABE_test/ABET_test.cpp)
+    add_test_executable(ABET_test test/ABE_test/ABET_test.cpp)
     add_test_executable(RABE_XNM_test test/ABE_test/RABE_XNM_test.cpp)
     add_test_executable(RABE_TMM_test test/ABE_test/RABE_TMM_test.cpp)
 
-    # add_test_executable(CH_AMV_2017_test test/scheme_test/CH_test/CH_AMV_2017_test.cpp)
+    add_test_executable(CH_AMV_2017_test test/scheme_test/CH_test/CH_AMV_2017_test.cpp)
     add_test_executable(CH_CDK_2017_test test/scheme_test/CH_test/CH_CDK_2017_test.cpp)
     add_test_executable(CH_ET_BC_CDK_2017_test test/scheme_test/CH_test/CH_ET_BC_CDK_2017_test.cpp)
     add_test_executable(CH_ET_KOG_CDK_2017_test test/scheme_test/CH_test/CH_ET_KOG_CDK_2017_test.cpp)
@@ -136,7 +103,7 @@ if(BUILD_TESTS)
     add_test_executable(DPCH_MXN_2022_test test/scheme_test/PBCH_test/DPCH_MXN_2022_test.cpp)
     add_test_executable(MAPCH_ZLW_2021_test test/scheme_test/PBCH_test/MAPCH_ZLW_2021_test.cpp)
     add_test_executable(PCH_DSS_2019_test test/scheme_test/PBCH_test/PCH_DSS_2019_test.cpp)
-    # add_test_executable(PCHBA_TLL_2020_test test/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
+    add_test_executable(PCHBA_TLL_2020_test test/scheme_test/PBCH_test/PCHBA_TLL_2020_test.cpp)
     add_test_executable(RPCH_TMM_2022_test test/scheme_test/PBCH_test/RPCH_TMM_2022_test.cpp)
     add_test_executable(RPCH_XNM_2021_test test/scheme_test/PBCH_test/RPCH_XNM_2021_test.cpp)
 endif()
