--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,8 @@ if(BUILD_TESTS)
     endmacro()
 
     add_test_executable(RSA_test test/AE_test/RSA_test.cpp)
-    add_test_executable(PKE_CPA_AMV_2017_test test/AE_test/PKE_CPA_AMV_2017_test.cpp)
-    add_test_executable(PKE_CCA_AMV_2017_test test/AE_test/PKE_CCA_AMV_2017_test.cpp)
+    # add_test_executable(PKE_CPA_AMV_2017_test test/AE_test/PKE_CPA_AMV_2017_test.cpp)
+    # add_test_executable(PKE_CCA_AMV_2017_test test/AE_test/PKE_CCA_AMV_2017_test.cpp)
     add_test_executable(AES_test test/SE_test/AES_test.cpp)
     add_test_executable(BLS_test test/signature_test/BLS_test.cpp)
     add_test_executable(CP_ABE_test test/ABE_test/CP_ABE_test.cpp)
@@ -77,7 +77,7 @@ if(BUILD_TESTS)
     add_test_executable(RABE_XNM_test test/ABE_test/RABE_XNM_test.cpp)
     add_test_executable(RABE_TMM_test test/ABE_test/RABE_TMM_test.cpp)
 
-    add_test_executable(CH_AMV_2017_test test/scheme_test/CH_test/CH_AMV_2017_test.cpp)
+    # add_test_executable(CH_AMV_2017_test test/scheme_test/CH_test/CH_AMV_2017_test.cpp)
     add_test_executable(CH_CDK_2017_test test/scheme_test/CH_test/CH_CDK_2017_test.cpp)
     add_test_executable(CH_ET_BC_CDK_2017_test test/scheme_test/CH_test/CH_ET_BC_CDK_2017_test.cpp)
     add_test_executable(CH_ET_KOG_CDK_2017_test test/scheme_test/CH_test/CH_ET_KOG_CDK_2017_test.cpp)
